<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Display_welcome"
            android:textColor="#ffffff"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Display_welcome_2"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/my_font" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round"
            android:textColor="#ffffff"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/setStartAndExpirationDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Display_SetDate"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:fontFamily="@font/my_font"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/startDateTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Display_StartDate"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:fontFamily="@font/lineseed"/>

                <TextView
                    android:id="@+id/startDateSet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:fontFamily="@font/my_font"/>

                <Button
                    android:id="@+id/startDateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Display_Set"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:fontFamily="@font/my_font"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/expDateTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Display_ExpirationDate"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:fontFamily="@font/lineseed"/>

                <TextView
                    android:id="@+id/expDateSet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:fontFamily="@font/my_font"/>

                <Button
                    android:id="@+id/expDateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Display_Set"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:fontFamily="@font/my_font"/>
            </LinearLayout>

            <TextView
                android:id="@+id/display_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="날짜를 선택해주세요"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:fontFamily="@font/my_font"/>

            <ProgressBar
                android:id="@+id/dateProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleY="1.5"
                android:progress="50"
                android:progressTint="#05C1AF"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/Display_remainDay_1"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:fontFamily="@font/lineseed"/>

                <TextView
                    android:id="@+id/remainDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:fontFamily="@font/lineseed"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/Display_remainDay_2"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:fontFamily="@font/lineseed"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round"
            android:textColor="#ffffff"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/selectImageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Display_SelectImage"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:fontFamily="@font/my_font"/>

            <ImageView
                android:id="@+id/viewBarcode"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:contentDescription="@string/Display_ImageDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Display_barcode_Widget_able"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:fontFamily="@font/my_font"/>

            <Button
                android:id="@+id/selectBarcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Display_SetBarcode"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:fontFamily="@font/my_font"/>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>